--- a/styles/fontello-embedded.css
+++ b/styles/fontello-embedded.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?57704863');
-  src: url('../font/fontello.eot?57704863#iefix') format('embedded-opentype'), url('../font/fontello.svg?57704863#fontello') format('svg');
+  src: url('../fonts/fontello.eot?57704863');
+  src: url('../fonts/fontello.eot?57704863#iefix') format('embedded-opentype'), url('../fonts/fontello.svg?57704863#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -13,13 +13,13 @@
 
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/* Note, that will break hinting! In other OS-es fonts will be not as sharp as it could be */
 
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'fontello';
-    src: url('../font/fontello.svg?57704863#fontello') format('svg');
+  @fonts-face {
+    fonts-family: 'fontello';
+    src: url('../fonts/fontello.svg?57704863#fontello') format('svg');
   }
 }
 */
@@ -44,7 +44,7 @@
   /* remove if not needed */
   margin-left: .2em;
   /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
+  /* fonts-size: 120%; */
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
