--- a/styles/fontello.css
+++ b/styles/fontello.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?24033430');
-  src: url('../font/fontello.eot?24033430#iefix') format('embedded-opentype'), url('../font/fontello.woff2?24033430') format('woff2'), url('../font/fontello.woff?24033430') format('woff'), url('../font/fontello.ttf?24033430') format('truetype'), url('../font/fontello.svg?24033430#fontello') format('svg');
+  src: url('../fonts/fontello.eot?24033430');
+  src: url('../fonts/fontello.eot?24033430#iefix') format('embedded-opentype'), url('../fonts/fontello.woff2?24033430') format('woff2'), url('../fonts/fontello.woff?24033430') format('woff'), url('../fonts/fontello.ttf?24033430') format('truetype'), url('../fonts/fontello.svg?24033430#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/* Note, that will break hinting! In other OS-es fonts will be not as sharp as it could be */
 
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'fontello';
-    src: url('../font/fontello.svg?24033430#fontello') format('svg');
+  @fonts-face {
+    fonts-family: 'fontello';
+    src: url('../fonts/fontello.svg?24033430#fontello') format('svg');
   }
 }
 */
@@ -39,7 +39,7 @@
   /* remove if not needed */
   margin-left: .2em;
   /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
+  /* fonts-size: 120%; */
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
